--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "@nuxt/test-utils": "3.19.2",
     "@nuxt/ui": "3.3.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/blob": "^1.1.1",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.0.3",
+    "pg": "^8.16.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.6.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
