--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ dist
 node_modules
 
 # Logs
-logs
 *.log
 
 # Misc
@@ -22,3 +21,12 @@ logs
 .env
 .env.*
 !.env.example
+
+# Storage directories (for development)
+storage/uploads/*
+storage/thumbnails/*
+!storage/uploads/.gitkeep
+!storage/thumbnails/.gitkeep
+
+# Vercel
+.vercel
