--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@nuxt/test-utils": "3.19.2",
     "@nuxt/ui": "3.3.0",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/blob": "^1.1.1",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.0.3",
     "pg": "^8.16.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.6.3",
     "vue": "^3.5.18",
